// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process XML nodes correctly correctly creates nodes from XML 1`] = `
Array [
  Array [
    Object {
      "attributes": Object {
        "id": "bk101",
      },
      "author": Object {
        "text": "Gambardella, Matthew",
      },
      "children": Array [],
      "description": Object {
        "text": "An in-depth look at creating applications
            with XML.",
      },
      "description_html": Object {
        "cdata": "<p>An in-depth look at creating applications
            with XML.</p>",
      },
      "genre": Object {
        "text": "Computer",
      },
      "id": "bk101",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "parent": "whatever",
      "price": Object {
        "text": "44.95",
      },
      "publish_date": Object {
        "text": "2000-10-01",
      },
      "title": Object {
        "text": "XML Developer's Guide",
      },
    },
  ],
  Array [
    Object {
      "attributes": Object {
        "id": "bk102",
      },
      "author": Object {
        "text": "Ralls, Kim",
      },
      "children": Array [],
      "description": Object {
        "text": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
      },
      "description_html": Object {
        "cdata": "<p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>",
      },
      "genre": Object {
        "text": "Fantasy",
      },
      "id": "bk102",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "parent": "whatever",
      "price": Object {
        "text": "5.95",
      },
      "publish_date": Object {
        "text": "2000-12-16",
      },
      "title": Object {
        "text": "Midnight Rain",
      },
    },
  ],
]
`;

exports[`Process XML nodes correctly correctly creates nodes from XML 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk101",
        },
        "author": Object {
          "text": "Gambardella, Matthew",
        },
        "children": Array [],
        "description": Object {
          "text": "An in-depth look at creating applications
            with XML.",
        },
        "description_html": Object {
          "cdata": "<p>An in-depth look at creating applications
            with XML.</p>",
        },
        "genre": Object {
          "text": "Computer",
        },
        "id": "bk101",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "parent": "whatever",
        "price": Object {
          "text": "44.95",
        },
        "publish_date": Object {
          "text": "2000-10-01",
        },
        "title": Object {
          "text": "XML Developer's Guide",
        },
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk102",
        },
        "author": Object {
          "text": "Ralls, Kim",
        },
        "children": Array [],
        "description": Object {
          "text": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
        },
        "description_html": Object {
          "cdata": "<p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>",
        },
        "genre": Object {
          "text": "Fantasy",
        },
        "id": "bk102",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "parent": "whatever",
        "price": Object {
          "text": "5.95",
        },
        "publish_date": Object {
          "text": "2000-12-16",
        },
        "title": Object {
          "text": "Midnight Rain",
        },
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;
